--- a/styles.css
+++ b/styles.css
@@ -50,19 +50,20 @@ button{
     text-align: center;
   }
   img {
-    animation: bounce 2s infinite;
+    animation: move-left-right 2s infinite;
   }
   
-  @keyframes bounce {
+  @keyframes move-left-right {
     from {
-      transform: translateY(0);
+      transform: translateX(0);
     }
   
     50% {
-      transform: translateY(-20px);
+      transform: translateX(-10px);
     }
   
-    100% {
-      transform: translateY(0);
+    to {
+      transform: translateX(10px);
     }
   }
+  
