--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body{
 
 h1{
     text-align: center;
+    font-family: comic sans ms;
 }
 #pet-image{
     display: block;
@@ -45,6 +46,7 @@ button{
     color: white;
   }
   #pet-name {
+    font-family: Arial, Helvetica, sans-serif sans ms;
     font-size: 24px;
     color: #000;
     text-align: center;
@@ -68,6 +70,7 @@ button{
   }
 
   .pet-name {
+    font-family: comic sans ms;
     font-size: 30px;
     color: purple;
     text-align: center;
